Change quiz button color to friendly orange

--- a/lp1/index.html
+++ b/lp1/index.html
@@ -105,7 +105,7 @@
 
         .elem__radio label {
             display: block;
-            background-color: #4a9eff;
+            background-color: #f7a072;
             color: #fff;
             padding: 14px;
             border-radius: 6px;
@@ -117,11 +117,11 @@
         }
 
         .elem__radio label:hover {
-            background-color: #3a8eef;
+            background-color: #f58a5e;
         }
 
         .elem__radio input[type="radio"]:checked + label {
-            background-color: #3577d4;
+            background-color: #f0753c;
         }
 
 
