--- a/lp4/index.html
+++ b/lp4/index.html
@@ -199,7 +199,7 @@
 
             <div class="video-container">
                 <a href="https://track.nutr.site/click" target="_blank">
-                    <img src="image_for_lp.png" alt="Ice Water Hack Video" class="video-image">
+                    <img src="lias.png" alt="Ice Water Hack Video" class="video-image">
                 </a>
             </div>
 
