Add line to final quiz step

--- a/lp1/index.html
+++ b/lp1/index.html
@@ -355,7 +355,7 @@
 
             <div class="form__step" data-step="6">
                 <div class="title">
-                    <p class="smaller-text">This free video tutorial reveals the bizarre &quot;Alpine Ice Hack&quot; that is helping people over 45 dissolve stubborn fat while they sleep. This information is highly controversial and is being actively targeted by the weight-loss industry. We only want to share it with people who are serious about changing their lives.</p>
+                    <p class="smaller-text">This free video tutorial reveals the bizarre &quot;Alpine Ice Hack&quot; that is helping people over 45 dissolve stubborn fat while they sleep. This information is highly controversial and is being actively targeted by the weight-loss industry. We only want to share it with people who are serious about changing their lives. Do you want to be one of the few people?</p>
                 </div>
                 <div class="elem__radio">
                     <input type="radio" id="radio12" name="step6" value="Yes">
