Fix testimonial text styling

--- a/lp4/index.html
+++ b/lp4/index.html
@@ -266,7 +266,7 @@
             <div class="content-text">
                 <div class="testimonial">
                     <img src="lias.png" alt="Lisa S." class="testimonial-image">
-                    <p><strong>From: Lisa S. (Mother of 2, Rediscovered Her Confidence)</strong></p>
+                    <p>From: Lisa S. (Mother of 2, Rediscovered Her Confidence)</p>
                 </div>
 
                 <p><strong>Stop everything you're doing and read this.</strong></p>
