--- a/lp4/index.html
+++ b/lp4/index.html
@@ -223,8 +223,8 @@
         }
 
         .testimonial-image {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             border-radius: 50%;
             object-fit: cover;
             margin-right: 15px;
@@ -266,7 +266,7 @@
             <div class="content-text">
                 <div class="testimonial">
                     <img src="lias.png" alt="Lisa S." class="testimonial-image">
-                    <p>From: Lisa S. (Mother of 2, Rediscovered Her Confidence)</p>
+                    <p>From: <strong>Lisa S.</strong> (Mother of 2, Rediscovered Her Confidence)</p>
                 </div>
 
                 <p><strong>Stop everything you're doing and read this.</strong></p>
