Swap contents of lp1 and lp4

--- a/lp4/disclaimer.html
+++ b/lp4/disclaimer.html
@@ -1,154 +1,73 @@
 <!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>Untitled</title>
+  
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disclaimer - glow-and-thrive.org</title>
+    <title>Disclaimer - Glow and Thrive</title>
     <style>
-        /* Reset CSS */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Body and general styles */
         body {
-            font-family: 'Roboto', Arial, sans-serif;
+            font-family: Arial, sans-serif;
+            margin: 20px;
             line-height: 1.6;
-            color: #333;
-            background-color: #f8f6fa;
         }
-
-        /* Container */
-        #container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
+        h1, h2 {
+            color: #2E8B57;
         }
-
-        /* Main content */
-        .content-wrapper {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        h3 {
+            color: #4682B4;
         }
-
-        /* Header styles */
-        h1 {
-            font-size: 32px;
-            line-height: 1.2;
-            text-align: center;
-            margin-bottom: 30px;
-            color: #3a2a5c;
-        }
-
-        h2 {
-            font-size: 24px;
-            margin: 30px 0 15px;
-            color: #3a2a5c;
-        }
-
-        /* Content text */
-        .content-text {
-            max-width: 900px;
-            margin: 0 auto;
-            font-size: 16px;
-        }
-
-        .content-text p {
-            margin-bottom: 15px;
-        }
-
-        /* Back link */
-        .back-link {
-            display: inline-block;
-            margin: 20px 0;
-            color: #8a2be2;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        .back-link:hover {
-            text-decoration: underline;
-        }
-
-        /* Footer */
-        .footer {
-            text-align: center;
-            padding: 20px;
-            margin-top: 30px;
-            border-top: 1px solid #ddd;
-            color: #666;
-            font-size: 14px;
-        }
-
-        .footer p {
+        p {
             margin-bottom: 10px;
-        }
-
-        .footer-links {
-            margin-top: 15px;
-        }
-
-        .footer-links a {
-            color: #3a2a5c;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        .footer-links a:hover {
-            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div id="container">
-        <div class="content-wrapper">
-            <header>
-                <h1>Disclaimer</h1>
-            </header>
+    <h1>Disclaimer</h1>
+    <p><strong>Effective Date:</strong> February 25, 2025</p>
 
-            <div class="content-text">
-                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
+    <h2>1. Educational and Informational Purposes Only</h2>
+    <p>The content on <a href="https://glow-and-thrive.org">glow-and-thrive.org</a> is provided for educational and informational purposes only. It is not intended as, and shall not be construed as, professional medical advice, diagnosis, or treatment. Always seek the guidance of your physician or other qualified health professionals with any questions you may have regarding your health or a medical condition.</p>
 
-                <h2>Website Disclaimer</h2>
-                <p>The information provided by glow-and-thrive.org ("we," "us," or "our") on our website is for general informational purposes only. All information on the site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
+    <h2>2. Not a Substitute for Professional Advice</h2>
+    <p>While we strive to provide accurate and up-to-date information, the content on this website should not replace professional advice tailored to your specific circumstances. Do not disregard, avoid, or delay obtaining medical or health-related advice from your healthcare professional because of something you may have read on this site.</p>
 
-                <p>Under no circumstance shall we have any liability to you for any loss or damage of any kind incurred as a result of the use of the site or reliance on any information provided on the site. Your use of the site and your reliance on any information on the site is solely at your own risk.</p>
+    <h2>3. No Guarantees</h2>
+    <p>We do not guarantee or warrant the accuracy, completeness, or timeliness of the information provided on this website. Your use of the content is at your own risk. <a href="https://glow-and-thrive.org">glow-and-thrive.org</a> and its affiliates shall not be liable for any losses or damages arising from the use or reliance on information provided on this site.</p>
 
-                <h2>External Links Disclaimer</h2>
-                <p>The site may contain (or you may be sent through the site) links to other websites or content belonging to or originating from third parties or links to websites and features in banners or other advertising. Such external links are not investigated, monitored, or checked for accuracy, adequacy, validity, reliability, availability, or completeness by us.</p>
+    <h2>4. External Links</h2>
+    <p>This website may contain links to external websites for additional information and convenience. <a href="https://glow-and-thrive.org">glow-and-thrive.org</a> does not endorse, guarantee, or assume responsibility for the accuracy or reliability of any information offered by third-party websites linked through our site.</p>
 
-                <h2>Professional Disclaimer</h2>
-                <p>The site cannot and does not contain medical/health advice. The medical/health information is provided for general informational and educational purposes only and is not a substitute for professional advice. Accordingly, before taking any actions based upon such information, we encourage you to consult with the appropriate professionals.</p>
+    <h2>5. Testimonials and Results</h2>
+    <p>From time to time, we may share testimonials or experiences of individuals on our website. These are individual results and do not guarantee or represent that you will achieve the same or similar outcomes. Your results may vary based on your unique circumstances, dedication, and adherence to the information provided.</p>
 
-                <h2>Testimonials Disclaimer</h2>
-                <p>The site may contain testimonials by users of our products and/or services. These testimonials reflect the real-life experiences and opinions of such users. However, the experiences are personal to those particular users, and may not necessarily be representative of all users of our products and/or services. We do not claim, and you should not assume, that all users will have the same experiences.</p>
+    <h2>6. Affiliate Disclosure</h2>
+    <p><a href="https://glow-and-thrive.org">glow-and-thrive.org</a> may engage in affiliate marketing, which means we may earn commissions from products or services purchased through links on our site. This comes at no additional cost to you. We only recommend products or services that we believe will add value to our readers.</p>
 
-                <h2>Affiliate Disclaimer</h2>
-                <p>The site may contain links to affiliate websites, and we receive an affiliate commission for any purchases made by you on the affiliate website using such links.</p>
+    <h2>7. Changes to This Disclaimer</h2>
+    <p>We reserve the right to modify this Disclaimer at any time. Any changes will be reflected with an updated effective date. It is your responsibility to review this Disclaimer periodically for updates.</p>
 
-                <h2>Health Disclaimer</h2>
-                <p>Any information about diet, weight loss, supplements, or any other health topics is historical or general information only. No statements or information on this website are intended to diagnose, treat, cure, or prevent any disease. None of the information on this website is a substitute for professional medical advice. You should always consult with your medical doctor or other qualified healthcare professional before adopting any new diet or exercise program.</p>
+    <h2>8. Contact Us</h2>
+    <p>If you have any questions or concerns regarding this Disclaimer, please contact us at: info@glow-and-thrive.org
+    </p>
 
-                <p>The information on this website is intended for educational purposes only. You are encouraged to do your own research and talk with your medical doctor or qualified healthcare professional before making any health, medical, weight loss, or diet-related decisions.</p>
-
-                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
-            </div>
-        </div>
-
-        <footer class="footer">
-            <p>COPYRIGHT 2025 Glow-and-thrive.org. All rights reserved.</p>
-            <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
-            <div class="footer-links">
-                <a href="https://Glow-and-thrive.org/privacy-policy">Privacy Policy</a> |
-                <a href="terms.html">Terms of Service</a> |
-                <a href="disclaimer.html">Disclaimer</a> |
-                <a href="https://Glow-and-thrive.org/contact">Contact</a>
-            </div>
-        </footer>
-    </div>
+    <footer style="font-size:10px;color:#999;text-align:center;margin-top:40px;line-height:1.4;">
+        <p>&copy; 2025 Glow-and-thrive.org. All rights reserved.</p>
+        <p>This site is not part of, nor endorsed by, Facebook™. Facebook™ is a trademark of Meta Platforms, Inc.</p>
+        <p>
+            <a href="terms.html" style="color:#999;">Terms</a> |
+            <a href="disclaimer.html" style="color:#999;">Disclaimer</a> |
+            <a href="privacy.html" style="color:#999;">Privacy Policy</a> |
+            <a href="contact.html" style="color:#999;">Contact Us</a>
+        </p>
+    </footer>
 </body>
 </html>
