--- a/lp1/privacy.html
+++ b/lp1/privacy.html
@@ -27,9 +27,9 @@
     }
     footer {
       text-align: center;
-      font-size: 10px;
+      font-size: 12px;
       margin-top: 40px;
-      color: #999;
+      color: #aaa;
     }
   </style>
 </head>
