Fix lpz6 page for mobile and tracking

--- a/lpz6/index.html
+++ b/lpz6/index.html
@@ -3,17 +3,6 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>
-   Untitled
-  </title>
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
-
-<html lang="en">
-<head>
-<meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>
      Alpine Ice Ritual - Lost 47 lbs in 6 Months | Susan Smith's Story
@@ -97,8 +86,9 @@
         }
 
         .hero-image {
-            width: 320px;
-            height: 320px;
+            width: 100%;
+            max-width: 320px;
+            height: auto;
             border-radius: 0.5rem;
             overflow: hidden;
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -425,8 +415,9 @@
             }
 
             .hero-image {
-                width: 280px;
-                height: 280px;
+                width: 100%;
+                max-width: 280px;
+                height: auto;
             }
 
             .content {
@@ -498,7 +489,7 @@
 <!-- Hero Image -->
 <div class="image-container">
 <div class="hero-image">
-<img alt="Susan running with her granddaughter" src="ChatGPT Image Jul 27, 2025, 09_36_05 PM.png"/>
+<img alt="Susan running with her granddaughter" src="hero.png"/>
 </div>
 </div>
 <!-- Article Content -->
@@ -563,7 +554,7 @@
 </div>
 <!-- CTA Section -->
 <div class="cta-section">
-<a class="cta-button" href="#">Watch the Doctor's Explanation Susan Found Helpful</a>
+<a class="cta-button" href="https://track.nutr.site/click" target="_blank">Watch the Doctor's Explanation Susan Found Helpful</a>
 <p class="cta-description">This is the same video Susan watched when she first discovered the Alpine method.</p>
 </div>
 <!-- Social Proof Section -->
@@ -623,7 +614,7 @@
 </section>
 <!-- Footer CTA -->
 <div class="footer-cta">
-<a class="cta-button" href="#">
+<a class="cta-button" href="https://track.nutr.site/click" target="_blank">
 <svg class="play-icon" fill="currentColor" viewbox="0 0 24 24">
 <path d="M8 5v14l11-7z">
 </path>
@@ -634,10 +625,7 @@
 </div>
 </article>
 <!-- Floating Sticky CTA Button -->
-<a class="floating-cta" href="#" style=" opacity: 0.85; font-size: 0.875rem; padding: 0.75rem 1rem; background-color: #6b7280; font-size: 0.85rem;">Watch Video</a>
-</body>
-</html>
-<!-- partial -->
+<a class="floating-cta" href="https://track.nutr.site/click" target="_blank" style=" opacity: 0.85; font-size: 0.875rem; padding: 0.75rem 1rem; background-color: #6b7280; font-size: 0.85rem;">Watch Video</a>
 <footer style="text-align: center; font-size: 0.875rem; color: #6b7280; padding: 2rem 1rem; border-top: 1px solid #e5e7eb; margin-top: 3rem;">
 <p>Copyright 2025 glow-and-thrive.org. All rights reserved.</p>
 <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
@@ -648,5 +636,6 @@
         <a href="contact.html">Contact</a>
 </p>
 </footer>
+    <script src="https://track.nutr.site/unilpclick.js?attribution=lastpaid&cookiedomain=&cookieduration=90&defaultcampaignid=&regviewonce=false"></script>
 </body>
 </html>
