Fix publication date alignment on lpz6

--- a/lpz6/index.html
+++ b/lpz6/index.html
@@ -78,6 +78,14 @@
             font-weight: 500;
         }
 
+        .published-date {
+            font-size: 0.875rem;
+            color: #9ca3af;
+            text-align: center;
+            margin-top: 0;
+            margin-bottom: 2rem;
+        }
+
         /* Hero Image */
         .image-container {
             display: flex;
@@ -485,7 +493,8 @@
         My Granddaughter Asked Me To Play at Recess—Six Months Ago, I Couldn't Walk Up My Own Stairs. Here's the Morning Ritual That Changed Everything.
        </h1>
 <p class="byline">Written by Susan, a 68-year-old grandma who reclaimed her energy and health.</p>
-<p style="font-size: 0.875rem; color: #9ca3af; text-align: center; margin-top: -1rem; margin-bottom: 2rem;">Published on July 18, 2025</p></header>
+<p class="published-date">Published on July 18, 2025</p>
+</header>
 <!-- Hero Image -->
 <div class="image-container">
 <div class="hero-image">
