Fix references section on lpz7

--- a/lpz7/index.html
+++ b/lpz7/index.html
@@ -267,9 +267,9 @@
 
 
             <div class="references-section">
-                <h2>As Featured In</h2>
+                <h2>Scientific References</h2>
                 <div class="references-logos">
-                    <img src="2588582735/3390624869-1.webp" alt="Scientific References" class="reference-logo">
+                    <img src="https://ext.same-assets.com/2588582735/3390624869.webp" alt="Scientific References" class="reference-logo">
                 </div>
             </div>
 
