--- a/lpz6/disclaimer.html
+++ b/lpz6/disclaimer.html
@@ -3,66 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disclaimer - Purple Peel Exploit</title>
+    <title>Disclaimer - glow-and-thrive.org</title>
     <style>
+        /* Reset CSS */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
         }
 
+        /* Body and general styles */
         body {
-            background-color: #fbfbfb;
-            color: #333;
+            font-family: 'Roboto', Arial, sans-serif;
             line-height: 1.6;
+            color: #333;
+            background-color: #f8f6fa;
         }
 
-        .container {
-            max-width: 800px;
+        /* Container */
+        #container {
+            max-width: 1200px;
             margin: 0 auto;
-            padding: 40px 20px;
+            padding: 20px;
         }
 
+        /* Main content */
+        .content-wrapper {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Header styles */
         h1 {
-            font-size: 28px;
-            color: #245f45;
-            margin-bottom: 30px;
+            font-size: 32px;
+            line-height: 1.2;
             text-align: center;
+            margin-bottom: 30px;
+            color: #3a2a5c;
         }
 
         h2 {
-            font-size: 20px;
-            margin: 25px 0 15px;
-            color: #245f45;
+            font-size: 24px;
+            margin: 30px 0 15px;
+            color: #3a2a5c;
         }
 
-        p {
+        /* Content text */
+        .content-text {
+            max-width: 900px;
+            margin: 0 auto;
+            font-size: 16px;
+        }
+
+        .content-text p {
             margin-bottom: 15px;
         }
 
-        ul {
-            margin-left: 20px;
-            margin-bottom: 15px;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        .footer {
-            margin-top: 50px;
-            text-align: center;
-            font-size: 14px;
-            color: #666;
-            border-top: 1px solid #eee;
-            padding-top: 20px;
-        }
-
+        /* Back link */
         .back-link {
             display: inline-block;
-            margin-top: 30px;
-            color: #245f45;
+            margin: 20px 0;
+            color: #8a2be2;
             text-decoration: none;
             font-weight: bold;
         }
@@ -71,56 +74,81 @@
             text-decoration: underline;
         }
 
-        .emphasis {
-            font-weight: bold;
+        /* Footer */
+        .footer {
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+            border-top: 1px solid #ddd;
+            color: #666;
+            font-size: 14px;
+        }
+
+        .footer p {
+            margin-bottom: 10px;
+        }
+
+        .footer-links {
+            margin-top: 15px;
+        }
+
+        .footer-links a {
+            color: #3a2a5c;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .footer-links a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Disclaimer</h1>
+    <div id="container">
+        <div class="content-wrapper">
+            <header>
+                <h1>Disclaimer</h1>
+            </header>
 
-        <p>Last updated: April 6, 2025</p>
+            <div class="content-text">
+                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
 
-        <h2>Website Disclaimer</h2>
+                <h2>Website Disclaimer</h2>
+                <p>The information provided by glow-and-thrive.org ("we," "us," or "our") on our website is for general informational purposes only. All information on the site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
 
-        <p>The information provided on the Purple Peel Exploit website is for general informational purposes only. All information on the site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
+                <p>Under no circumstance shall we have any liability to you for any loss or damage of any kind incurred as a result of the use of the site or reliance on any information provided on the site. Your use of the site and your reliance on any information on the site is solely at your own risk.</p>
 
-        <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
+                <h2>External Links Disclaimer</h2>
+                <p>The site may contain (or you may be sent through the site) links to other websites or content belonging to or originating from third parties or links to websites and features in banners or other advertising. Such external links are not investigated, monitored, or checked for accuracy, adequacy, validity, reliability, availability, or completeness by us.</p>
 
-        <h2>Results Disclaimer</h2>
+                <h2>Professional Disclaimer</h2>
+                <p>The site cannot and does not contain medical/health advice. The medical/health information is provided for general informational and educational purposes only and is not a substitute for professional advice. Accordingly, before taking any actions based upon such information, we encourage you to consult with the appropriate professionals.</p>
 
-        <p>The testimonials and examples used are exceptional results, which do not apply to the average purchaser, and are not intended to represent or guarantee that anyone will achieve the same or similar results.</p>
+                <h2>Testimonials Disclaimer</h2>
+                <p>The site may contain testimonials by users of our products and/or services. These testimonials reflect the real-life experiences and opinions of such users. However, the experiences are personal to those particular users, and may not necessarily be representative of all users of our products and/or services. We do not claim, and you should not assume, that all users will have the same experiences.</p>
 
-        <p>Each individual's success depends on his or her background, dedication, desire, and motivation. As with any health-related program, your results may vary, and will be based on many variables, including but not limited to, your individual capacity, life experience, unique health and genetic profile, starting point, expertise, and level of commitment.</p>
+                <h2>Affiliate Disclaimer</h2>
+                <p>The site may contain links to affiliate websites, and we receive an affiliate commission for any purchases made by you on the affiliate website using such links.</p>
 
-        <p class="emphasis">THE INFORMATION PROVIDED ON THIS WEBSITE AND THE PRODUCT SOLD HERE IS NOT INTENDED TO REPLACE THE RELATIONSHIP BETWEEN A PATIENT/SITE USER AND THEIR RESPECTIVE PHYSICIAN OR HEALTHCARE PROVIDER. THIS WEBSITE AND PRODUCT IS NOT DESIGNED TO DIAGNOSE, TREAT, CURE OR PREVENT ANY HEALTH CONDITION OR DISEASE.</p>
+                <h2>Health Disclaimer</h2>
+                <p>Any information about diet, weight loss, supplements, or any other health topics is historical or general information only. No statements or information on this website are intended to diagnose, treat, cure, or prevent any disease. None of the information on this website is a substitute for professional medical advice. You should always consult with your medical doctor or other qualified healthcare professional before adopting any new diet or exercise program.</p>
 
-        <h2>Health Disclaimer</h2>
+                <p>The information on this website is intended for educational purposes only. You are encouraged to do your own research and talk with your medical doctor or qualified healthcare professional before making any health, medical, weight loss, or diet-related decisions.</p>
 
-        <p>The website cannot and does not contain medical or health advice. The medical and health information is provided for general informational and educational purposes only and is not a substitute for professional advice.</p>
+                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
+            </div>
+        </div>
 
-        <p>Accordingly, before taking any actions based upon such information, we encourage you to consult with the appropriate professionals. The use or reliance of any information contained on this site is solely at your own risk.</p>
-
-        <h2>External Links Disclaimer</h2>
-
-        <p>The Site may contain (or you may be sent through the Site) links to other websites or content belonging to or originating from third parties or links to websites and features in banners or other advertising. Such external links are not investigated, monitored, or checked for accuracy, adequacy, validity, reliability, availability, or completeness by us.</p>
-
-        <p>WE DO NOT WARRANT, ENDORSE, GUARANTEE, OR ASSUME RESPONSIBILITY FOR THE ACCURACY OR RELIABILITY OF ANY INFORMATION OFFERED BY THIRD-PARTY WEBSITES LINKED THROUGH THE SITE OR ANY WEBSITE OR FEATURE LINKED IN ANY BANNER OR OTHER ADVERTISING.</p>
-
-        <h2>Affiliate Disclosure</h2>
-
-        <p>This site may contain links to affiliate websites, and we may receive an affiliate commission for any purchases made by you on the affiliate website using such links.</p>
-
-        <h2>Testimonials Disclaimer</h2>
-
-        <p>The Site may contain testimonials by users of our products and/or services. These testimonials reflect the real-life experiences and opinions of such users. However, the experiences are personal to those particular users, and may not necessarily be representative of all users of our products and/or services. We do not claim, and you should not assume, that all users will have the same experiences.</p>
-
-        <a href="index.html" class="back-link">← Back to Home</a>
-    </div>
-
-    <div class="footer">
-        <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
+        <footer class="footer">
+            <p>COPYRIGHT 2025 Glow-and-thrive.org. All rights reserved.</p>
+            <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
+            <div class="footer-links">
+                <a href="https://Glow-and-thrive.org/privacy-policy">Privacy Policy</a> |
+                <a href="terms.html">Terms of Service</a> |
+                <a href="disclaimer.html">Disclaimer</a> |
+                <a href="https://Glow-and-thrive.org/contact">Contact</a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
