--- a/lpz6/terms.html
+++ b/lpz6/terms.html
@@ -3,134 +3,172 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Purple Peel Exploit</title>
+    <title>Terms of Service - glow-and-thrive.org</title>
     <style>
+        /* Reset CSS */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: Arial, sans-serif;
         }
 
+        /* Body and general styles */
         body {
-            background-color: #fbfbfb;
-            color: #333;
+            font-family: 'Roboto', Arial, sans-serif;
             line-height: 1.6;
+            color: #333;
+            background-color: #f8f6fa;
         }
 
-        .container {
-            max-width: 800px;
+        /* Container */
+        #container {
+            max-width: 1200px;
             margin: 0 auto;
-            padding: 40px 20px;
+            padding: 20px;
         }
 
+        /* Main content */
+        .content-wrapper {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Header styles */
         h1 {
-            font-size: 28px;
-            color: #245f45;
-            margin-bottom: 30px;
+            font-size: 32px;
+            line-height: 1.2;
             text-align: center;
+            margin-bottom: 30px;
+            color: #3a2a5c;
         }
 
         h2 {
-            font-size: 20px;
-            margin: 25px 0 15px;
-            color: #245f45;
+            font-size: 24px;
+            margin: 30px 0 15px;
+            color: #3a2a5c;
         }
 
-        p {
+        /* Content text */
+        .content-text {
+            max-width: 900px;
+            margin: 0 auto;
+            font-size: 16px;
+        }
+
+        .content-text p {
             margin-bottom: 15px;
         }
 
-        ul {
-            margin-left: 20px;
+        .content-text ul {
             margin-bottom: 15px;
+            padding-left: 20px;
         }
 
-        li {
-            margin-bottom: 10px;
+        .content-text li {
+            margin-bottom: 8px;
         }
 
-        .footer {
-            margin-top: 50px;
-            text-align: center;
-            font-size: 14px;
-            color: #666;
-            border-top: 1px solid #eee;
-            padding-top: 20px;
-        }
-
+        /* Back link */
         .back-link {
             display: inline-block;
-            margin-top: 30px;
-            padding: 12px 24px;
-            background-color: #245f45;
-            color: white;
+            margin: 20px 0;
+            color: #8a2be2;
             text-decoration: none;
             font-weight: bold;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-            text-align: center;
         }
 
         .back-link:hover {
-            background-color: #1d4e39;
+            text-decoration: underline;
         }
 
-        .back-container {
+        /* Footer */
+        .footer {
             text-align: center;
-            margin-top: 40px;
+            padding: 20px;
+            margin-top: 30px;
+            border-top: 1px solid #ddd;
+            color: #666;
+            font-size: 14px;
+        }
+
+        .footer p {
+            margin-bottom: 10px;
+        }
+
+        .footer-links {
+            margin-top: 15px;
+        }
+
+        .footer-links a {
+            color: #3a2a5c;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .footer-links a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Terms of Service</h1>
+    <div id="container">
+        <div class="content-wrapper">
+            <header>
+                <h1>Terms of Service</h1>
+            </header>
 
-        <p>Last updated: April 6, 2025</p>
+            <div class="content-text">
+                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
 
-        <p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the Purple Peel Exploit website operated by glow-and-thrive.org.</p>
+                <h2>1. Terms</h2>
+                <p>By accessing the website at glow-and-thrive.org, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
 
-        <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
+                <h2>2. Use License</h2>
+                <p>Permission is granted to temporarily download one copy of the materials (information or software) on glow-and-thrive.org's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:</p>
+                <ul>
+                    <li>modify or copy the materials;</li>
+                    <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
+                    <li>attempt to decompile or reverse engineer any software contained on glow-and-thrive.org's website;</li>
+                    <li>remove any copyright or other proprietary notations from the materials; or</li>
+                    <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
+                </ul>
+                <p>This license shall automatically terminate if you violate any of these restrictions and may be terminated by glow-and-thrive.org at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</p>
 
-        <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</p>
+                <h2>3. Disclaimer</h2>
+                <p>The materials on glow-and-thrive.org's website are provided on an 'as is' basis. glow-and-thrive.org makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</p>
+                <p>Further, glow-and-thrive.org does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.</p>
 
-        <h2>Content</h2>
+                <h2>4. Limitations</h2>
+                <p>In no event shall glow-and-thrive.org or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on glow-and-thrive.org's website, even if glow-and-thrive.org or a glow-and-thrive.org authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
 
-        <p>Our Service allows you to view content related to health and nutrition. The content provided is for informational purposes only and is not intended to be a substitute for professional medical advice, diagnosis, or treatment.</p>
+                <h2>5. Accuracy of Materials</h2>
+                <p>The materials appearing on glow-and-thrive.org's website could include technical, typographical, or photographic errors. glow-and-thrive.org does not warrant that any of the materials on its website are accurate, complete or current. glow-and-thrive.org may make changes to the materials contained on its website at any time without notice. However glow-and-thrive.org does not make any commitment to update the materials.</p>
 
-        <h2>Purchases</h2>
+                <h2>6. Links</h2>
+                <p>glow-and-thrive.org has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by glow-and-thrive.org of the site. Use of any such linked website is at the user's own risk.</p>
 
-        <p>If you wish to purchase any product or service made available through the Service ("Purchase"), you may be asked to supply certain information relevant to your Purchase including, without limitation, your credit card number, the expiration date of your credit card, your billing address, and your shipping information.</p>
+                <h2>7. Modifications</h2>
+                <p>glow-and-thrive.org may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.</p>
 
-        <p>You represent and warrant that: (i) you have the legal right to use any credit card(s) or other payment method(s) in connection with any Purchase; and that (ii) the information you supply to us is true, correct and complete.</p>
+                <h2>8. Governing Law</h2>
+                <p>These terms and conditions are governed by and construed in accordance with the laws and you irrevocably submit to the exclusive jurisdiction of the courts in that location.</p>
 
-        <h2>Availability, Errors and Inaccuracies</h2>
-
-        <p>We are constantly updating our offerings of products and services on the Service. The products or services available on our Service may be mispriced, described inaccurately, or unavailable, and we may experience delays in updating information on the Service and in our advertising on other websites.</p>
-
-        <p>We cannot and do not guarantee the accuracy or completeness of any information, including prices, product images, specifications, availability, and services. We reserve the right to change or update information and to correct errors, inaccuracies, or omissions at any time without prior notice.</p>
-
-        <h2>Links To Other Web Sites</h2>
-
-        <p>Our Service may contain links to third-party web sites or services that are not owned or controlled by glow-and-thrive.org.</p>
-
-        <p>glow-and-thrive.org has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that glow-and-thrive.org shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
-
-        <h2>Changes</h2>
-
-        <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days' notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
-
-        <h2>Contact Us</h2>
-
-        <p>If you have any questions about these Terms, please contact us.</p>
-
-        <div class="back-container">
-            <a href="index.html" class="back-link">← Back to Home</a>
+                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
+            </div>
         </div>
-    </div>
 
-    <div class="footer">
-        <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
+        <footer class="footer">
+            <p>Copyright 2025 Glow-and-thrive.org. All rights reserved.</p>
+            <p>This site is not part, neither is it endorsed by FACEBOOK™. FACEBOOK™ is a trademark of FACEBOOK™, Inc.</p>
+            <div class="footer-links">
+                <a href="https://Glow-and-thrive.org/privacy-policy">Privacy Policy</a> |
+                <a href="terms.html">Terms of Service</a> |
+                <a href="disclaimer.html">Disclaimer</a> |
+                <a href="https://Glow-and-thrive.org/contact">Contact</a>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
