Copy lpz6 layout to lpz8 and rebrand hack

--- a/lpz8/disclaimer.html
+++ b/lpz8/disclaimer.html
@@ -111,7 +111,7 @@
             </header>
 
             <div class="content-text">
-                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
+                <a href="index.html" class="back-link">← Back to Home</a>
 
                 <h2>Website Disclaimer</h2>
                 <p>The information provided by glow-and-thrive.org ("we," "us," or "our") on our website is for general informational purposes only. All information on the site is provided in good faith, however we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on the site.</p>
@@ -135,7 +135,7 @@
 
                 <p>The information on this website is intended for educational purposes only. You are encouraged to do your own research and talk with your medical doctor or qualified healthcare professional before making any health, medical, weight loss, or diet-related decisions.</p>
 
-                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
+                <a href="index.html" class="back-link">← Back to Home</a>
             </div>
         </div>
 
