--- a/lpz8/terms.html
+++ b/lpz8/terms.html
@@ -120,7 +120,7 @@
             </header>
 
             <div class="content-text">
-                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
+                <a href="index.html" class="back-link">← Back to Home</a>
 
                 <h2>1. Terms</h2>
                 <p>By accessing the website at glow-and-thrive.org, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
@@ -155,7 +155,7 @@
                 <h2>8. Governing Law</h2>
                 <p>These terms and conditions are governed by and construed in accordance with the laws and you irrevocably submit to the exclusive jurisdiction of the courts in that location.</p>
 
-                <a href="ice-water-hack.html" class="back-link">← Back to Home</a>
+                <a href="index.html" class="back-link">← Back to Home</a>
             </div>
         </div>
 
