--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Untitled</title>
+  <title>Himalayan Pink Salt and Ice Hack</title>
   
 
 </head>
@@ -13,7 +13,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Welcome to VitalPoint</title>
+  <title>Himalayan Pink Salt and Ice Hack</title>
   <style>
     body {
       margin: 0;
