Add frame-busting script to lpz8 pages

--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -2,8 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
+  <script>
+    if (window.self !== window.top) {
+      window.top.location = window.location.href;
+    }
+  </script>
   <title>Untitled</title>
-  
+
 
 </head>
 <body>
