--- a/lpz8/privacy.html
+++ b/lpz8/privacy.html
@@ -3,6 +3,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script>
+    if (window.self !== window.top) {
+      window.top.location = window.location.href;
+    }
+  </script>
   <title>Privacy Policy - Glow and Thrive</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
