--- a/lpz8/contact.html
+++ b/lpz8/contact.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script>
+    if (window.self !== window.top) {
+      window.top.location = window.location.href;
+    }
+  </script>
   <title>Contact Us</title>
 </head>
 <body>
