--- a/lpz8/terms.html
+++ b/lpz8/terms.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script>
+        if (window.self !== window.top) {
+            window.top.location = window.location.href;
+        }
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - glow-and-thrive.org</title>
     <style>
