Replace Harvard references with general research language

--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harvard Study Links Bedtime Ritual to Metabolic Health | Health Insights Daily</title>
+    <title>Clinical Study Links Bedtime Ritual to Metabolic Health | Health Insights Daily</title>
     <script>
         if (window.self !== window.top) {
             window.top.location = window.location.href;
@@ -344,7 +344,7 @@
                 <span>Updated 7:12 a.m. ET</span>
                 <span>Reviewed by Dr. Henry Wallace, MD</span>
             </div>
-            <h1 class="headline">Harvard Study Links Bedtime Mineral Ritual to Smoother Metabolic Function in Adults Over 40</h1>
+            <h1 class="headline">Clinical Study Links Bedtime Mineral Ritual to Smoother Metabolic Function in Adults Over 40</h1>
             <p class="subheadline">A brief “pink salt and ice” routine is drawing attention after early participants reported leaner waistlines, deeper sleep, and steadier energy.</p>
 
             <figure class="hero-image">
@@ -356,7 +356,7 @@
             <section class="article-body">
                 <article class="article-content">
                     <p>For years, <strong>Lisa S.</strong>, a 54-year-old mother of two from Portland, assumed her slowing metabolism was inevitable. “I exercised, counted calories, and still the scale would not budge,” she recalls. Her frustration mirrors that of millions of Americans navigating the complex puzzle of midlife weight management.</p>
-                    <p>A research team collaborating with Harvard-affiliated clinicians now believes they have identified a missing piece. Their recently circulated findings suggest that the body’s so-called “slimming cells” can become dormant with age—yet remain responsive to targeted mineral exposure and cooling sensations before sleep.</p>
+                    <p>A research team collaborating with board-certified clinicians now believes they have identified a missing piece. Their recently circulated findings suggest that the body’s so-called “slimming cells” can become dormant with age—yet remain responsive to targeted mineral exposure and cooling sensations before sleep.</p>
                     <p class="pull-quote">“This isn’t about another fad,” notes Dr. Wallace. “It is about supporting cellular thermogenesis so the body can resume doing what it was designed to do.”</p>
                     <p>The protocol—nicknamed the <strong>“Himalayan Pink Salt and Ice Hack”</strong>—takes fewer than ten seconds. According to preliminary data reviewed by Health Insights Daily, participants who adhered to the ritual for six consecutive weeks reported visibly slimmer waistlines, improved sleep quality scores, and self-described boosts in morning alertness.</p>
                     <p>Lisa says the difference was noticeable within the first month. “My favorite jeans stopped pinching, and I woke up feeling rested instead of foggy,” she explains. Her experience aligns with user logs shared by the research team, which indicate consistent body composition improvements without drastic diet changes.</p>
@@ -365,12 +365,12 @@
 
                     <section class="cta-panel" aria-label="Access the investigative briefing">
                         <h3>Watch the investigative briefing</h3>
-                        <a class="cta-button" href="https://track.nutr.site/click" target="_blank" rel="noopener">Access the Harvard Briefing</a>
+                        <a class="cta-button" href="https://track.nutr.site/click" target="_blank" rel="noopener">Access the Research Briefing</a>
                         <p class="cta-note">Independent coverage provided by Health Insights Daily. Availability subject to research partner scheduling.</p>
                     </section>
 
                     <section class="references" aria-label="Research highlights">
-                        <p><strong>Research highlights:</strong> Findings are drawn from early-stage observational data, Harvard-affiliated metabolic research initiatives, and anonymized participant testimonials verified by Health Insights Daily’s editorial team.</p>
+                        <p><strong>Research highlights:</strong> Findings are drawn from early-stage observational data, independent metabolic research initiatives, and anonymized participant testimonials verified by Health Insights Daily’s editorial team.</p>
                     </section>
                 </article>
 
