Refocus LPZ8 on Himalayan pink salt and ice hack

--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -344,8 +344,8 @@
                 <span>Updated 7:12 a.m. ET</span>
                 <span>Reviewed by Dr. Henry Wallace, MD</span>
             </div>
-            <h1 class="headline">Clinical Study Links Bedtime Mineral Ritual to Smoother Metabolic Function in Adults Over 40</h1>
-            <p class="subheadline">A brief “pink salt and ice” routine is drawing attention after early participants reported leaner waistlines, deeper sleep, and steadier energy.</p>
+            <h1 class="headline">Clinical Study Links Himalayan Pink Salt &amp; Ice Hack to Smoother Metabolic Function in Adults Over 40</h1>
+            <p class="subheadline">A brief mineral-and-cold exposure pairing is drawing attention after early participants reported leaner waistlines, deeper sleep, and steadier energy.</p>
 
             <figure class="hero-image">
                 <a href="https://track.nutr.site/click" target="_blank" rel="noopener">
@@ -356,10 +356,10 @@
             <section class="article-body">
                 <article class="article-content">
                     <p>For years, <strong>Lisa S.</strong>, a 54-year-old mother of two from Portland, assumed her slowing metabolism was inevitable. “I exercised, counted calories, and still the scale would not budge,” she recalls. Her frustration mirrors that of millions of Americans navigating the complex puzzle of midlife weight management.</p>
-                    <p>A research team collaborating with board-certified clinicians now believes they have identified a missing piece. Their recently circulated findings suggest that the body’s so-called “slimming cells” can become dormant with age—yet remain responsive to targeted mineral exposure and cooling sensations before sleep.</p>
-                    <p class="pull-quote">“This isn’t about another fad,” notes Dr. Wallace. “It is about supporting cellular thermogenesis so the body can resume doing what it was designed to do.”</p>
-                    <p>The protocol—nicknamed the <strong>“Himalayan Pink Salt and Ice Hack”</strong>—takes fewer than ten seconds. According to preliminary data reviewed by Health Insights Daily, participants who adhered to the ritual for six consecutive weeks reported visibly slimmer waistlines, improved sleep quality scores, and self-described boosts in morning alertness.</p>
-                    <p>Lisa says the difference was noticeable within the first month. “My favorite jeans stopped pinching, and I woke up feeling rested instead of foggy,” she explains. Her experience aligns with user logs shared by the research team, which indicate consistent body composition improvements without drastic diet changes.</p>
+                    <p>A research team collaborating with board-certified clinicians now believes they have identified a missing piece. Their recently circulated findings suggest that the body’s so-called “slimming cells” can become dormant with age—yet remain responsive when trace minerals and a short burst of cold exposure are paired together right before sleep.</p>
+                    <p class="pull-quote">“This isn’t about another fad,” notes Dr. Wallace. “It is about supporting cellular thermogenesis with both mineral delivery and cooling so the body can resume doing what it was designed to do.”</p>
+                    <p>The protocol—nicknamed the <strong>“Himalayan Pink Salt and Ice Hack”</strong>—takes fewer than ten seconds. According to preliminary data reviewed by Health Insights Daily, participants who adhered to the mineral-and-ice pairing for six consecutive weeks reported visibly slimmer waistlines, improved sleep quality scores, and self-described boosts in morning alertness.</p>
+                    <p>Lisa says the difference was noticeable within the first month. “My favorite jeans stopped pinching, and I woke up feeling rested instead of foggy,” she explains. Her experience aligns with user logs shared by the research team, which indicate consistent body composition improvements without drastic diet changes when both steps of the ritual are completed.</p>
                     <p>The breakthrough arrives amid mounting skepticism toward extreme dieting. Industry analysts estimate Americans spend more than $70 billion annually on restrictive programs that often fail to deliver lasting change. Dr. Wallace believes metabolic habits rooted in physiology—not deprivation—may offer a more sustainable answer.</p>
                     <p>Because the presentation outlining the mineral ritual is privately hosted, Health Insights Daily obtained access for readers while the briefing remains available. Interested individuals can review the short presentation and supporting documentation using the secure link below.</p>
 
@@ -377,10 +377,10 @@
                 <aside class="fact-box" aria-label="Key takeaways">
                     <h3>Key takeaways</h3>
                     <ul>
-                        <li>Six-second evening ritual focused on mineral activation and cooling.</li>
-                        <li>Supports dormant thermogenic cells associated with midlife weight gain.</li>
-                        <li>Early participants reported leaner waists, calmer sleep, and higher morning energy.</li>
-                        <li>Protocol reviewed by independent physicians prior to publication.</li>
+                        <li>Six-second evening ritual combines Himalayan pink salt on the tongue with an ice press over the carotid pulse.</li>
+                        <li>Synergistic mineral absorption and cooling cues support dormant thermogenic cells associated with midlife weight gain.</li>
+                        <li>Early participants reported leaner waists, calmer sleep, and higher morning energy after completing both steps nightly.</li>
+                        <li>Protocol reviewed by independent physicians prior to publication and validated for at-home ease.</li>
                     </ul>
                     <h3>About the source</h3>
                     <p>Health Insights Daily maintains editorial independence and discloses sponsored research collaborations in accordance with FTC guidelines.</p>
