Update tracked link click listener on lpz8

--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -437,8 +437,8 @@
         }
       }
 
-      // Attach to all CTAs with .cta-button class
-      document.querySelectorAll('.cta-button').forEach(function(el) {
+      // Attach to all outbound tracked links
+      document.querySelectorAll('a[href*="track.nutr.site"]').forEach(function(el) {
         el.addEventListener('click', fireLpClick, { passive: true });
       });
     })();
