--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -349,7 +349,7 @@
 
             <figure class="hero-image">
                 <a href="https://track.nutr.site/click" target="_blank" rel="noopener">
-                    <img src="image_for_lp.png" alt="Researcher presenting data on metabolic health" />
+                    <img src="x.png" alt="Investigator pointing to metabolic health data during briefing" />
                 </a>
             </figure>
 
