Update lpz8 hero copy and CTA text

--- a/lpz8/index.html
+++ b/lpz8/index.html
@@ -345,8 +345,11 @@
                 <span>Updated 7:12 a.m. ET</span>
                 <span>Reviewed by Dr. Henry Wallace, MD</span>
             </div>
-            <h1 class="headline">Clinical Study Links Himalayan Pink Salt &amp; Ice Hack to Smoother Metabolic Function in Adults Over 40</h1>
-            <p class="subheadline">A brief mineral-and-cold exposure pairing is drawing attention after early participants reported leaner waistlines, deeper sleep, and steadier energy.</p>
+            <h1 class="headline">She added this to her water every morning… and her jeans started falling off.</h1>
+            <p class="subheadline">Harvard researchers uncovered a simple mineral-and-ice method that could explain why diets fail — the presentation is available for a limited time.</p>
+            <p style="font-size:17px; color:#555; text-align:center; margin-bottom:20px;">
+              At first, her doctor said it was impossible… but after seeing her results, he couldn’t explain how it worked.
+            </p>
 
             <figure class="hero-image">
                 <a href="https://track.nutr.site/click" target="_blank" rel="noopener" onclick="if(isInAppBrowser()){window.location.href='https://openinbrowser.co?url='+encodeURIComponent(this.href);return false;}">
@@ -366,7 +369,7 @@
 
                     <section class="cta-panel" aria-label="Access the investigative briefing">
                         <h3>Watch the investigative briefing</h3>
-                        <a class="cta-button" href="https://track.nutr.site/click" target="_blank" rel="noopener" onclick="if(isInAppBrowser()){window.location.href='https://openinbrowser.co?url='+encodeURIComponent(this.href);return false;}">Access the Research Briefing</a>
+                        <a class="cta-button" href="https://track.nutr.site/click" target="_blank" rel="noopener" onclick="if(isInAppBrowser()){window.location.href='https://openinbrowser.co?url='+encodeURIComponent(this.href);return false;}">Continue to the video →</a>
                         <p class="cta-note">Independent coverage provided by Health Insights Daily. Availability subject to research partner scheduling.</p>
                     </section>
 
